# dcel

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  ComputationalGeometry.sln  LICENSE  README.md  convexHull.hpp  main.cpp
include/: geo_binary_search_tree.hpp  geo_btree.hpp  geo_convex_hull.hpp  geo_dcel.hpp  geo_dcel_face.hpp  geo_dcel_halfedge.hpp  geo_dcel_vertex.hpp  geo_epsilon.hpp  geo_intersection.hpp  geo_rbtree.hpp  geo_shape.hpp  geo_status.hpp  geo_sweepline.hpp  geo_sweepline_edge.hpp  geo_sweepline_state.hpp  geo_sweepline_vertex.hpp  geo_triangulation.hpp  geo_type.hpp  geo_vector2.hpp  geo_visualize.hpp  point_location.h  point_location_edge.h  point_location_persistent_rbtree.h  point_location_rbtree.h  point_location_vertex.h  util.hpp
include/Shape/: geo_monotone_polygon.hpp  geo_polygon.hpp  geo_triangle.hpp
src/: geo_dcel.cpp  geo_dcel_face.cpp  geo_dcel_halfedge.cpp  geo_dcel_vertex.cpp  geo_epsilon.cpp  geo_sweepline.cpp  geo_sweepline_edge.cpp  geo_sweepline_state.cpp  geo_sweepline_vertex.cpp  geo_triangulation.cpp  geo_triangulation.hpp  geo_vector2.cpp  geo_visualize.cpp  main.cpp  point_location.cpp  point_location_persistent_rbtree.cpp  point_location_rbtree.cpp
